--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+:root {
+    --primary-color: #c5b4a4;
+    --secondary-color:#efddcd
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +16,7 @@ body {
 
 header {
     padding: 20px 35px;
-    background-color: #e2a164;
+    background-color: var(--primary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -40,6 +45,45 @@ header nav ul li a {
     font-size: 1.30vw;
 }
 
-.appetizer {
-    background-color: bisque;
+
+.developer {
+    background-color: var(--secondary-color);
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    padding: 50px;
+}
+
+.developer img {
+    width: 20%;
+    border-radius: 50px;
+
+}
+
+.ava-img {
+    display: flex;
+}
+
+.developer h2 {
+    font-size: 38px;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.intro {
+    background-color: var(--primary-color);
+}
+
+
+
+
+.works {
+    background-color: var(--secondary-color);
+}
+
+
+.contacts {
+    background-color: var(--primary-color);
 }
